[gd_scene load_steps=49 format=2]

[ext_resource path="res://objects/Minions/MinionController.gd" type="Script" id=1]
[ext_resource path="res://sprites/minions/purple/fetusminion_walk_right_purple.png" type="Texture" id=2]
[ext_resource path="res://sprites/minions/purple/fetusminion_walk_left_steaksheetpurple.png" type="Texture" id=3]
[ext_resource path="res://objects/resources/ResourceStore.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/Minions/AnimationHandler.gd" type="Script" id=5]
[ext_resource path="res://sprites/minions/yellow/fetusminion_walk_right_yellow.png" type="Texture" id=6]
[ext_resource path="res://sprites/minions/standard/fetusminion_walk_rightt.png" type="Texture" id=7]
[ext_resource path="res://sprites/minions/standard/fetusminion_walk_left_steaksheet.png" type="Texture" id=8]
[ext_resource path="res://sprites/minions/yellow/fetusminion_walk_left_steaksheetyellow.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "purple",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "standard",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 9 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "purple",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "yellow",
"speed": 5.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "standard",
"speed": 5.0
} ]

[node name="Minion" type="KinematicBody2D" groups=[
"Minion",
]]
position = Vector2( 328, 224 )
script = ExtResource( 1 )
walk_speed = 250

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="ResourceStore" parent="." instance=ExtResource( 4 )]

[node name="AnimationHandler" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="EmptyWalkAnimation" type="AnimatedSprite" parent="AnimationHandler"]
position = Vector2( 0, -16 )
frames = SubResource( 8 )
animation = "purple"

[node name="EnergyWalkAnimation" type="AnimatedSprite" parent="AnimationHandler"]
visible = false
position = Vector2( 0, -24 )
frames = SubResource( 15 )
animation = "standard"
